--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,8 @@ ENV/
 
 # mypy
 .mypy_cache/
+.idea/aci_bridge.iml
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
